// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign-in in bento snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f4f4f5",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "marginBottom": 8,
                  "marginTop": 8,
                  "padding": 22,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e4e4e7",
                  "borderRadius": 22,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                  {
                    "minHeight": 54,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityLabel="Expyrico"
                align="xMidYMid"
                bbHeight={54}
                bbWidth={54}
                focusable={false}
                height={54}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 54,
                      "width": 54,
                    },
                  ]
                }
                vbHeight={865}
                vbWidth={865}
                width={54}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        0,
                        190,
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                      fill={
                        {
                          "payload": 4283671941,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                      fill={
                        {
                          "payload": 4294090009,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                      fill={
                        {
                          "payload": 4291968547,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                      fill={
                        {
                          "payload": 4281019943,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 28,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#0a0a0a",
                  },
                ]
              }
            >
              Welcome back
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "center",
                  },
                  {
                    "color": "#71717a",
                  },
                ]
              }
            >
              Sign in to scan items, track expiry dates, and keep your pantry current.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 14,
              }
            }
          >
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#71717a",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Email
              </Text>
              <TextInput
                accessibilityLabel="Email"
                autoCapitalize="none"
                keyboardType="email-address"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#71717a"
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#e4e4e7",
                      "borderRadius": 14,
                      "color": "#0a0a0a",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#71717a",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Password
              </Text>
              <TextInput
                accessibilityLabel="Password"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#71717a"
                secureTextEntry={true}
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#e4e4e7",
                      "borderRadius": 14,
                      "color": "#0a0a0a",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
          </View>
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#fbbf24",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-submit"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#e4e4e7",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Forgot password?
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "marginVertical": 16,
              }
            }
          >
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#e4e4e7",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#71717a",
                  },
                ]
              }
            >
              or continue with
            </Text>
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#e4e4e7",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityLabel="Continue with Google"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#0a0a0a",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-google"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Continue with Google
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Use a passkey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#e4e4e7",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
            testID="sign-in-passkey"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Use a passkey
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`sign-in in clay snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#fff7f0",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "marginBottom": 8,
                  "marginTop": 8,
                  "padding": 22,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#fde0c2",
                  "borderRadius": 28,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                  {
                    "minHeight": 54,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityLabel="Expyrico"
                align="xMidYMid"
                bbHeight={54}
                bbWidth={54}
                focusable={false}
                height={54}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 54,
                      "width": 54,
                    },
                  ]
                }
                vbHeight={865}
                vbWidth={865}
                width={54}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        0,
                        190,
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                      fill={
                        {
                          "payload": 4283671941,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                      fill={
                        {
                          "payload": 4294090009,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                      fill={
                        {
                          "payload": 4291968547,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                      fill={
                        {
                          "payload": 4281019943,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 28,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#5b3a1f",
                  },
                ]
              }
            >
              Welcome back
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "center",
                  },
                  {
                    "color": "#a47148",
                  },
                ]
              }
            >
              Sign in to scan items, track expiry dates, and keep your pantry current.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 14,
              }
            }
          >
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#a47148",
                      "fontSize": 13,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Email
              </Text>
              <TextInput
                accessibilityLabel="Email"
                autoCapitalize="none"
                keyboardType="email-address"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#a47148"
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#fde0c2",
                      "borderRadius": 16,
                      "color": "#5b3a1f",
                      "fontSize": 17,
                    },
                  ]
                }
                value=""
              />
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#a47148",
                      "fontSize": 13,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Password
              </Text>
              <TextInput
                accessibilityLabel="Password"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#a47148"
                secureTextEntry={true}
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#fde0c2",
                      "borderRadius": 16,
                      "color": "#5b3a1f",
                      "fontSize": 17,
                    },
                  ]
                }
                value=""
              />
            </View>
          </View>
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#fbbf24",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-submit"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#5b3a1f",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#fde0c2",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#5b3a1f",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Forgot password?
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "marginVertical": 16,
              }
            }
          >
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#fde0c2",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#a47148",
                  },
                ]
              }
            >
              or continue with
            </Text>
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#fde0c2",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityLabel="Continue with Google"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#ea580c",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-google"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#ea580c",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Continue with Google
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Use a passkey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#fde0c2",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
            testID="sign-in-passkey"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#5b3a1f",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Use a passkey
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`sign-in in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#0b0a17",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "marginBottom": 8,
                  "marginTop": 8,
                  "padding": 22,
                },
                {
                  "backgroundColor": "rgba(255,255,255,0.08)",
                  "borderColor": "rgba(255,255,255,0.12)",
                  "borderRadius": 28,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                  {
                    "minHeight": 54,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityLabel="Expyrico"
                align="xMidYMid"
                bbHeight={54}
                bbWidth={54}
                focusable={false}
                height={54}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 54,
                      "width": 54,
                    },
                  ]
                }
                vbHeight={865}
                vbWidth={865}
                width={54}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        0,
                        190,
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                      fill={
                        {
                          "payload": 4283671941,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                      fill={
                        {
                          "payload": 4294090009,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                      fill={
                        {
                          "payload": 4291968547,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                      fill={
                        {
                          "payload": 4294638330,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 28,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#fafafa",
                  },
                ]
              }
            >
              Welcome back
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(250,250,250,0.7)",
                  },
                ]
              }
            >
              Sign in to scan items, track expiry dates, and keep your pantry current.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 14,
              }
            }
          >
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "rgba(250,250,250,0.7)",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Email
              </Text>
              <TextInput
                accessibilityLabel="Email"
                autoCapitalize="none"
                keyboardType="email-address"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="rgba(250,250,250,0.7)"
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "rgba(255,255,255,0.06)",
                      "borderColor": "rgba(255,255,255,0.12)",
                      "borderRadius": 14,
                      "color": "#fafafa",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "rgba(250,250,250,0.7)",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Password
              </Text>
              <TextInput
                accessibilityLabel="Password"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="rgba(250,250,250,0.7)"
                secureTextEntry={true}
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "rgba(255,255,255,0.06)",
                      "borderColor": "rgba(255,255,255,0.12)",
                      "borderRadius": 14,
                      "color": "#fafafa",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
          </View>
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#a5f3fc",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-submit"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#fafafa",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "rgba(255,255,255,0.12)",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#fafafa",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Forgot password?
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "marginVertical": 16,
              }
            }
          >
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.12)",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "rgba(250,250,250,0.7)",
                  },
                ]
              }
            >
              or continue with
            </Text>
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.12)",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityLabel="Continue with Google"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#a855f7",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-google"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#a855f7",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Continue with Google
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Use a passkey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "rgba(255,255,255,0.12)",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
            testID="sign-in-passkey"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#fafafa",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Use a passkey
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`sign-in in material snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f0e8ff",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "marginBottom": 8,
                  "marginTop": 8,
                  "padding": 22,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 28,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                  {
                    "minHeight": 54,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityLabel="Expyrico"
                align="xMidYMid"
                bbHeight={54}
                bbWidth={54}
                focusable={false}
                height={54}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 54,
                      "width": 54,
                    },
                  ]
                }
                vbHeight={865}
                vbWidth={865}
                width={54}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        0,
                        190,
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                      fill={
                        {
                          "payload": 4283671941,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                      fill={
                        {
                          "payload": 4294090009,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                      fill={
                        {
                          "payload": 4291968547,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                      fill={
                        {
                          "payload": 4281019943,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 28,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1d1b20",
                  },
                ]
              }
            >
              Welcome back
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "center",
                  },
                  {
                    "color": "#65558f",
                  },
                ]
              }
            >
              Sign in to scan items, track expiry dates, and keep your pantry current.
            </Text>
          </View>
          <View
            style={
              {
                "gap": 14,
              }
            }
          >
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#65558f",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Email
              </Text>
              <TextInput
                accessibilityLabel="Email"
                autoCapitalize="none"
                keyboardType="email-address"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#65558f"
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#e0e0e0",
                      "borderRadius": 16,
                      "color": "#1d1b20",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "letterSpacing": 0.2,
                    },
                    {
                      "color": "#65558f",
                      "fontSize": 12,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Password
              </Text>
              <TextInput
                accessibilityLabel="Password"
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholderTextColor="#65558f"
                secureTextEntry={true}
                style={
                  [
                    {
                      "borderWidth": 1.5,
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#e0e0e0",
                      "borderRadius": 16,
                      "color": "#1d1b20",
                      "fontSize": 16,
                    },
                  ]
                }
                value=""
              />
            </View>
          </View>
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#7c4dff",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-submit"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#1d1b20",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#1d1b20",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Forgot password?
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "marginVertical": 16,
              }
            }
          >
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#e0e0e0",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#65558f",
                  },
                ]
              }
            >
              or continue with
            </Text>
            <View
              style={
                [
                  {
                    "flex": 1,
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#e0e0e0",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityLabel="Continue with Google"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#65558f",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="sign-in-google"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#65558f",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Continue with Google
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Use a passkey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderWidth": 1,
                  "opacity": 1,
                },
                false,
                false,
                false,
              ]
            }
            testID="sign-in-passkey"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#1d1b20",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Use a passkey
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;
